# punfetch

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  distros.yaml  flake.nix
.github/: release-drafter.yml
.github/workflows/: pages.yml  publish.yml  rust.yml
benches/: cli.rs  distro.rs  main.rs
derive/: Cargo.toml
derive/src/: lib.rs
distros/: Cargo.toml  build.rs
distros/src/: distros.tera  lib.rs
docs/: patch.diff
examples/: custom_fetch.rs
pages/: vercel
src/: bin.rs  info.rs  lib.rs  main.rs  render.rs
src/distros/: distro.tera  distros.tera  mod.rs
