[package]
name = "punfetch"
version = "0.2.0"
edition = "2021"
description = "A blazingly fast system fetch designed to replicate the look of onefetch."
license = "MIT"
homepage = "https://github.com/ozwaldorf/punfetch"
repository = "https://github.com/ozwaldorf/punfetch"
readme = "README.md"
authors = ["ossian <self@ossian.dev>"]

[[bin]]
name = "punfetch"
path = "src/bin.rs"

[lib]
name = "libpunfetch"
path = "src/lib.rs"

[dependencies]
byte-unit = "4.0.18"
clap = { version = "4.0.32", features = ["cargo"] }
colored = "2.0.0"
humantime = "2.1.0"
image = "0.24.5"
onefetch-image = "2.14.2"
sysinfo = "0.27.2"
term_size = "0.3.2"
num_enum = "0.5.7"
regex = "1"

[build-dependencies]
lazy_static = "1"
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }

[dev-dependencies]
criterion = "0.4"
punfetch = { path = "." }

[[bench]]
name = "cli"
harness = false

[[bench]]
name = "distro"
harness = false

[profile.release]
lto = true
opt-level = 'z'
strip = 'debuginfo'
