[package]
name = "punfetch"
version = "0.3.3"
description = "A blazingly fast system fetch program to pair with onefetch"
readme = "README.md"
authors = ["ossian <self@ossian.dev>"]
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[workspace]
members = ["derive"]

[workspace.package]
license = "MIT"
edition = "2021"
homepage = "https://github.com/ozwaldorf/punfetch"
repository = "https://github.com/ozwaldorf/punfetch"
documentation = "https://docs.rs/punfetch"
categories = ["command-line-utilities"]
keywords = ["fetch", "system", "onefetch", "cli", "terminal"]

[dependencies]
byte-unit = "4.0.18"
clap = { version = "4.0.32", features = ["cargo", "derive"], optional = true }
humantime = "2.1.0"
image = "0.24.5"
num_enum = "0.5.7"
onefetch-ascii = "2.15.1"
onefetch-image = "2.15.1"
owo-colors = "3.5.0"
punfetch-derive = { path = "derive", version = "0.1.1" }
regex = "1"
sysinfo = { version = "0.27.2", optional = true }
term_size = { version = "0.3.2", optional = true }

[features]
binary = ["clap", "term_size", "sysinfo"]
default = ["binary"]

[lib]
name = "punfetch"

[[bin]]
name = "punfetch"
path = "src/bin.rs"
required-features = ["binary"]

[build-dependencies]
lazy_static = "1"
owo-colors = "3.5.0"
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }

[dev-dependencies]
criterion = "0.4"
punfetch = { path = "." }

[[bench]]
name = "cli"
harness = false

[[bench]]
name = "distro"
harness = false

[profile.release]
lto = true
opt-level = 'z'
strip = 'debuginfo'
