[package]
name = "punfetch_distros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
regex = "1"

[build-dependencies]
lazy_static = "1"
serde_json = "1"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }
regex = "1"
