[package]
name = "punfetch_distros"
version = "0.1.0"
edition = "2021"
description = "Punfetch's distro implementation"
license = "MIT"
homepage = "https://github.com/ozwaldorf/punfetch"
repository = "https://github.com/ozwaldorf/punfetch"
authors = ["ossian <self@ossian.dev>"]

[dependencies]
num_enum = "0.5.7"
regex = "1"

[build-dependencies]
lazy_static = "1"
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }
